# LaTeXApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
installer/: latexapp.iss.in
scripts/: build.ps1  configure.ps1  deploy.ps1  make-installer.ps1  release.ps1  run.ps1  test.ps1
src/: main.cpp
src/models/: Diagnostic.h  DiagnosticsModel.cpp  DiagnosticsModel.h  ProjectConfig.cpp  ProjectConfig.h  ProjectTreeModel.cpp  ProjectTreeModel.h
src/resources/: app.rc.in
src/services/: BuildManager.cpp  BuildManager.h  LatexEnvironmentService.cpp  LatexEnvironmentService.h  ProjectService.cpp  ProjectService.h  SyncTexService.cpp  SyncTexService.h  TemplateService.cpp  TemplateService.h
src/ui/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/widgets/: LatexEditor.cpp  LatexEditor.h  LatexHighlighter.cpp  LatexHighlighter.h  PdfPreviewView.cpp  PdfPreviewView.h
templates/article/: main.tex
templates/beamer/: main.tex
templates/letter/: main.tex
templates/report/: main.tex
templates/thesis/: main.tex
tests/: main.cpp
